Fix janky icon spacing
The icons were spaced out too much due to the beautification.
Excess comments have also been removed.


Former-commit-id: 9d1b8ba475d48af168b59f9122630f04925e71b0 [formerly e957367caaf44aa0fc0636817706086b2b8996f1]
Former-commit-id: 7139a40ca2d155855dae51fd7fc6c2fdd51bb578

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -35,44 +35,23 @@ h3:after {
   padding-top: 10px;
 }
 
+#col1, #col2, #col3, #col4, #col5 {
+  width: 18%;
+  min-height: 300px;
+  display: inline-block;
+  vertical-align: top;
+}
+
 #col1 {
   margin: 0 0 0 2.5%;
-  width: 19%;
-  min-height: 350px;
-  display: inline-block;
-  vertical-align: top;
 }
 
-#col2 {
+#col2, #col3, #col4 {
   margin: 0 0 0 0;
-  width: 19%;
-  min-height: 350px;
-  display: inline-block;
-  vertical-align: top;
-}
-
-#col3 {
-  margin: 0 0 0 0;
-  width: 19%;
-  min-height: 350px;
-  display: inline-block;
-  vertical-align: top;
-}
-
-#col4 {
-  margin: 0 0 0 0;
-  width: 19%;
-  min-height: 350px;
-  display: inline-block;
-  vertical-align: top;
 }
 
 #col5 {
   margin: 0 2.5% 0 0;
-  width: 19%;
-  min-height: 350px;
-  display: inline-block;
-  vertical-align: top;
 }
 
 .vision h3 {
